Added some hyperparameter tuning Updated Flask app with PDF upload functionality Updated Flask app with prediction response

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
-# pip install pandas scikit-learn nltk spacy transformers fastapi torch torchvision torchaudio
+# pip install pandas scikit-learn nltk spacy transformers fastapi torch torchvision torchaudio PyPDF2
 # python -m spacy download en_core_web_sm
